// Vitest Snapshot v1

exports[`deobfuscate obfuscator.io.js 1`] = `
"// v4.0.0

function hi() {
  console.log(\\"Hello World!\\");
  console.log( /*webcrack:decode_error*/undefined);
  console.log( /*webcrack:decode_error*/undefined);
}
hi();
function a(b) {
  function e(f) {
    if (typeof f === \\"string\\") {
      return function (g) {}.constructor(\\"while (true) {}\\").apply(\\"counter\\");
    } else if ((\\"\\" + f / f).length !== 1 || f % 20 === 0) {
      (function () {
        return true;
      }).constructor(\\"debugger\\").call(\\"action\\");
    } else {
      (function () {
        return false;
      }).constructor(\\"debugger\\").apply(\\"stateObject\\");
    }
    e(++f);
  }
  try {
    if (b) {
      return e;
    } else {
      e(0);
    }
  } catch (f) {}
}"
`;

exports[`deobfuscate obfuscator.io-control-flow.js 1`] = `
"function applyTransforms() {
  this.modules.forEach(varInjection_1.inlineVarInjections);
  this.modules.forEach(esm_1.convertESM);
  (0, getDefaultExport_1.convertDefaultRequire)(this);
  this.replaceRequireCalls();
  var f = m.capture(m.numericLiteral());
  var g = m.callExpression(m.identifier(\\"require\\"), [f]);
  return g;
}"
`;

exports[`deobfuscate obfuscator.io-function-wrapper.js 1`] = `
"function hi() {
  console.log(\\"Hello World!\\");
  console.log(30);
  console.log(undefined);
}
hi();"
`;

exports[`deobfuscate obfuscator.io-high.js 1`] = `
"(function () {
  var _0x5b07a9 = function () {
    var _0x3d6989;
    try {
      _0x3d6989 = Function(\\"return (function() {}.constructor(\\\\\\"return this\\\\\\")( ));\\")();
    } catch (_0x4516e9) {
      _0x3d6989 = window;
    }
    return _0x3d6989;
  };
  var _0x152a02 = _0x5b07a9();
  _0x152a02.setInterval(_0x40ea98, 4000);
})();
function hi() {
  console.log(\\"Hello World!\\");
}
hi();
function _0x40ea98(_0x3857c8) {
  function _0xb25c5e(_0x22f5f3) {
    if (typeof _0x22f5f3 === \\"string\\") {
      return function (_0x40f974) {}.constructor(\\"while (true) {}\\").apply(\\"counter\\");
    } else if ((\\"\\" + _0x22f5f3 / _0x22f5f3).length !== 1 || _0x22f5f3 % 20 === 0) {
      (function () {
        return true;
      }).constructor(\\"debugger\\").call(\\"action\\");
    } else {
      (function () {
        return false;
      }).constructor(\\"debugger\\").apply(\\"stateObject\\");
    }
    _0xb25c5e(++_0x22f5f3);
  }
  try {
    if (_0x3857c8) {
      return _0xb25c5e;
    } else {
      _0xb25c5e(0);
    }
  } catch (_0x3e75bc) {}
}"
`;

exports[`deobfuscate obfuscator.io-multi-encoders.js 1`] = `
"function hi() {
  console.log(\\"Hello World!\\");
}
hi();"
`;

exports[`deobfuscate obfuscator.io-rotator-unary.js 1`] = `
"function hi() {
  console.log(\\"Hello World!\\");
}
hi();"
`;

exports[`inline decoder > inline function 1`] = `
"function decoder() {}
decoder(1);
(() => {
  decoder(2 - 625, 3);
  (() => {
    decoder(5 - -678 - 625, 4);
  })();
})();"
`;

exports[`inline decoder > inline variable 1`] = `
"function decoder() {}
decoder(1);
() => {
  decoder(2);
  decoder(3);
  () => {
    alias(4);
  };
};"
`;
